git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1708 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -426,6 +426,7 @@
 													<li class="topline"><a href="#">Kardex</a></li>
 													-->
 													<li class="topline"><a href="../invrepexis/startup.agnux">Inventario</a></li>
+													<li class="topline"><a href="../invrepexis2/startup.agnux">Inventario Versi&oacute;n 2</a></li>
 													<li class="topline"><a href="../repinvexislote/startup.agnux">Existencias en Lotes</a></li>
 													<li class="topline"><a href="../repinvexispres/startup.agnux">Existencias en Presentaciones</a></li>
 													<li class="topline"><a href="../invetiquetas/startup.agnux">Impresi&oacute;n de Etiquetas</a></li>
