git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1726 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -435,6 +435,7 @@
 													<li class="topline"><a href="../invetiquetas/startup.agnux">Impresi&oacute;n de Etiquetas</a></li>
 													<li class="topline"><a href="../repinvkits/startup.agnux">Kits</a></li>
 													<li class="topline"><a href="../repinvmovimientos/startup.agnux">Movimientos</a></li>
+													<li class="topline"><a href="../invetiquetasentrada/startup.agnux">Etiquetas de Entrada</a></li>
 													<!--
 													<li class="topline"><a href="#">Existencias FÃ­sicas Capturadas</a></li>
 													-->
