git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1734 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -548,6 +548,7 @@
 													<li><a href="../centrocostos/startup.agnux">Centros de Costos</a></li>
 													<li><a href="../conceptoscontables/startup.agnux">Conceptos Contables</a></li>
 													<li><a href="../tipopolizas/startup.agnux">Tipos de P&oacute;liza</a></li>
+													<li><a href="../ctbdefasientos/startup.agnux">Definici&oacute;n de Asientos</a></li>
 												</ul>
 											</li>
 											
