--- a/erp-quimicos/src/main/webapp/vm/ctbdefasientos/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/ctbdefasientos/startup.vm
@@ -40,51 +40,39 @@
 				<td colspan="13">&nbsp;&nbsp;</td>
 			</tr>
 			<tr>
-				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+				<td width="10">&nbsp;</td>
+				<!--
 				<td width="150">Sucursal</td>
-				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+				<td width="10">&nbsp;</td>
+				-->
 				<td width="150">Tipo&nbsp;de&nbsp;P&oacute;liza</td>
-				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td width="100">Estatus</td>
-				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td width="90">P&oacute;liza</td>
-				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				
-				<td width="22"></td>
-				<td width="150" colspan="4">Fecha de la P&oacute;liza</td>
-				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				
-				<td width="180">Concepto</td>
-				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td></td>
-				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td></td>
-				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+				<td width="10">&nbsp;</td>
+				<td width="100">Folio</td>
+				<td width="10">&nbsp;</td>
+				<td width="250">Nombre</td>
+				<td width="50">&nbsp;</td>
+				<td width="70"></td>
+				<td width="10">&nbsp;</td>
+				<td width="70"></td>
+				<td width="10">&nbsp;</td>
 			</tr>
 			
 			<tr>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+				<!--
 				<td width="150"><select name="busqueda_select_sucursal" style="width:150px;"><option value="0" selected="yes">[-- --]</option></select></td>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+				-->
 				<td width="150"><select name="busqueda_select_tipo_poliza" style="width:150px;"><option value="0" selected="yes">[-- --]</option></select></td>
 				<td width="10">&nbsp;</td>
-				<td width="100"><select name="busqueda_select_estatus" style="width:100px;"><option value="0" selected="yes">[-- --]</option></select></td>
+				<td width="100"><input type="text" name="busqueda_folio" style="width:100px;"></td>
 				<td width="10">&nbsp;</td>
-				<td width="90"><input type="text" name="busqueda_poliza" style="width:90px;"></td>
+				<td width="250"><input type="text" name="busqueda_nombre" style="width:250px;"></td>
+				<td width="50">&nbsp;</td>
+				<td width="70"><input type="button" value="Buscar" style="width:60px;"></td>
 				<td width="10">&nbsp;</td>
-				<td width="22"><IMG SRC="../../img/catalogo/calendario.png" ALIGN="top"></td>
-				<td width="70"><input type="text" name="busqueda_fecha_inicial" style="width:70px;" readOnly="true"></td>
-				<td width="5"></td>
-				<td width="22"><IMG SRC="../../img/catalogo/calendario.png" ALIGN="top"></td>
-				<td width="70"><input type="text" name="busqueda_fecha_final" style="width:70px;" readOnly="true"></td>
-				
-				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td width="180"><select name="busqueda_select_concepto" style="width:180px;"><option value="0" selected="yes">[-- --]</option></select></td>
-				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td><input type="button" value="Buscar"></td>
-				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-				<td ><input type="button" value="Limpiar"></td>
-				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+				<td width="70"><input type="button" value="Limpiar" style="width:60px;"></td>
+				<td width="10">&nbsp;</td>
 			</tr>
 		</table>
         
@@ -107,11 +95,7 @@
         <form id="formactbdefasientos00" action="edit.json" method="POST" >
         <!--clase la quite por causar problemas      tabulador -->
                 <div id="div_one" class="panelcito_modal ctbdefasientos_div_one"  style="display:none;" title="">
-                
 					<input type="hidden" name="identificador">
-					<input type="hidden" name="accion" value="">
-					<input type="hidden" name="estatus" >
-					
                     <div id="div_two" title="" class="ctbdefasientos_div_two">
                         <div class="columns on-2">
                             <div class="fixed column" id="cierra" style="width:550px; padding-left:6px;"><strong>Definici&oacute;n de Asientos Contables</strong></div>
@@ -120,7 +104,6 @@
                             </div>
                         </div>
                     </div>
-                    
                     
                     <div id="div_three" title="" class="ctbdefasientos_div_three">
                         <div class="columns" >
@@ -138,31 +121,30 @@
 										
                                         <table border="0" style="margin:0; padding:0;">
 											<tr>
-												<td width="580"></td>
+												<td width="590"></td>
 											</tr>
 											<tr>
 												<td valign="top">
 													<table border="0" class="gral">
+														<!--
 														<tr>
 															<td width="10"></td>
 															<td width="50">Sucursal</td>
 															<td width="190" colspan="3"><select name="select_sucursal" style="width:190px;"></select></td>
-															<!--
-															<td width="30"></td>
-															<td width="60"></td>
-															-->
 															<td width="250"></td>
 															<td width="30"></td>
 														</tr>
 														<tr><td height="8" colspan="7"></td></tr>
+														-->
+														
 														<tr>
 															<td width="10"></td>
 															<td width="50">Folio</td>
 															<td width="100"><input type="text"name="folio" style="width:100px;" maxlength="10" readOnly></td>
 															<td width="30"></td>
 															<td width="60">Nombre</td>
-															<td width="250"><input type="text"name="nombre" style="width:250px;" maxlength="10"></td>
-															<td width="30"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_nombre"></div></td>
+															<td width="280"><input type="text"name="nombre" style="width:280px;" ></td>
+															<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_nombre"></div></td>
 														</tr>
 														<tr><td height="8" colspan="7"></td></tr>
 														<tr>
@@ -171,8 +153,8 @@
 															<td width="100"><select name="select_fecha" style="width:100px;"><option value="1">Documento</option></select></td>
 															<td width="30"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_fecha"></div></td>
 															<td width="60">P&oacute;liza&nbsp;Num.</td>
-															<td width="250"><select name="select_pol_num" style="width:250px;"><option value="1">Cosecutivo del sistema</option></select></td>
-															<td width="30"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_polnum"></div></td>
+															<td width="280"><select name="select_pol_num" style="width:280px;"><option value="0">[ ----- ]</option></select></td>
+															<td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_polnum"></div></td>
 														</tr>
 														<tr><td height="8" colspan="7"></td></tr>
 														<tr>
@@ -183,14 +165,13 @@
 															<td width="30"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_tipo"></div></td>
 															<td width="60"></td>
 															-->
-															<td width="250"></td>
-															<td width="30"></td>
+															<td width="280"></td>
+															<td width="25"></td>
 														</tr>
 														<tr><td height="8" colspan="7"></td></tr>
 													</table>
 												</td>
 											</tr>
-											
 											
 											<tr>
 												<td valign="top" > 
@@ -216,22 +197,21 @@
 												</td>
 											</tr>
 											
-											
-											
 											<tr>
 												<td style="border-top: 1px solid #C1DAD7; border-bottom: 1px solid #C1DAD7; border-left: 1px solid #FFFFFF; border-right: 1px solid #FFFFFF;">
 													<table >
 														<thead>
 															<tr>
-																<td class="grid" style="background-color:rgb(180,180, 180); border-botton: 0px none;" width="30">&nbsp;#</td>
-																<td class="grid" style="background-color:rgb(180,180, 180);" width="150">Cuenta</td>
-																<td class="grid" style="background-color:rgb(180,180, 180);" width="250">Descripci&oacute;n</td>
-																<td class="grid" style="background-color:rgb(180,180, 180);" width="90">Movimiento</td>
+																<td class="grid" style="background-color:rgb(180,180,180); border-botton:0px none;" width="30">&nbsp;#</td>
+																<td class="grid" style="background-color:rgb(180,180,180);" width="150">Cuenta</td>
+																<td class="grid" style="background-color:rgb(180,180,180);" width="250">Descripci&oacute;n</td>
+																<td class="grid" style="background-color:rgb(180,180,180);" width="60">D-H</td>
+																<td class="grid" style="background-color:rgb(180,180,180); "width="50">Detalle</td>
 															</tr>
 														</thead>
 														<tbody>
 															<tr>
-																<td colspan="4">
+																<td colspan="5">
 																	<div style="overflow:scroll; overflow-x:hidden; overflow-y:auto; height:140px; border:1px solid #C1DAD7 !important;">	
 																		<table>
 																			<tbody style="background-color: #FFFFFF;" valign="top" id="grid_cuentas">
@@ -281,13 +261,8 @@
 												</td>
 											</tr>
 											
-											
-											
 										</table>
                                     </div>
-									
-									
-
 									
                                 </div>
                             </div>
@@ -305,10 +280,7 @@
 										<td><div id="boton_cancelar" style="width:77px; height:24px; float:right; cursor:pointer; background-image:url('../../img/modalbox/btn2.png'); background-repeat:no-repeat;"></div></td>
 									</tr>
 								</table>
-                                
                             </div>
-                            
-                            
                             
                         </div>
                     </div>
@@ -322,9 +294,6 @@
         
         
         
-        
-		
-		
 		
 		
 		<div class="buscador_cuentas" style="display:none;">	
@@ -389,7 +358,7 @@
 													<td width="270" colspan="9"><input type="text" name="campo_descripcion" style="width:270px;"></td>
 													<td width="80"></td>
 													<td width="100"></td>
-													<td width="50" align="right"><input type="button" id="boton_busca" class="onmouseOutBuscar"></td>
+													<td width="50" align="right"><input type="button" id="boton_busca" class="onmouseOutBuscar" style="height:20px;" ></td>
 												</tr>
 												
 											</table>
