--- a/erp-quimicos/src/main/webapp/css/modalbox/gralimptras/formaGralImpTras.css
+++ b/erp-quimicos/src/main/webapp/css/modalbox/gralimptras/formaGralImpTras.css
@@ -97,8 +97,8 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 .gralimptras_div_one{
     /*background-image:url('Imagen/ven1.png');
     background-repeat:no-repeat;*/
-	width:370px;
-	height:245px;
+	width:420px;
+	height:240px;
 	border-radius:10px;
 	background-color:#e9e9e9;
     border:3px solid #454442;
@@ -109,7 +109,7 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 
 .gralimptras_div_two{
 	/*font-family:tahoma;*/
-    width:380px;
+    width:420px;
     height:28px;
     background-color:#454442;
 	margin-top:0;
@@ -124,7 +124,7 @@ html ul.pestanas li.active, html ul.pestanas li.active a:hover{
 .gralimptras_div_three{
 	/*font-family:tahoma;*/
 	font-size:11px;
-    width:370px;
+    /*width:420px;*/
     /*height:180px;*/
     background-color:#e9e9e9;
     margin-top:5px;
